--- a/cinechain.css
+++ b/cinechain.css
@@ -315,7 +315,7 @@ main {
     color: #1a73e8;
 }
 
-/* Specific Movie Card Styling for Image Matching a*/
+/* Specific Movie Card Styling for Image Matching */
 .top-movie .movie-info h3 {
     color: #333;
     font-size: 1.25em;
